--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,21 @@
-.App {
+/* .App {
   text-align: center;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
-}
+} */
 /* write your parent styles in here for your App.js */
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+.App {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Source Code Pro', monospace;
+}
+.App .Header {
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 7.5rem;
+}
